[package]
name    = "todo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1", features = ["full"] }
axum         = "0.7"
tower-http   = { version = "0.6", features = ["trace"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
dirs         = "5"
clap         = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
